// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Extension > renders correctly with all props 1`] = `
<div
  class="_t8qIa_spectrum kDKRXa_spectrum kDKRXa_i18nFontFamily YqfL3a_spectrum--light _1DrGeG_spectrum--large XhWg9q_spectrum XhWg9q_spectrum--dark XhWg9q_spectrum--darkest XhWg9q_spectrum--large XhWg9q_spectrum--light XhWg9q_spectrum--lightest XhWg9q_spectrum--medium"
  dir="ltr"
  lang="en-US"
  style="isolation: isolate; color-scheme: light;"
>
  <div
    class="_extension-root_c3dee6 _grow_c3dee6"
  >
    <h2>
      test-extension
    </h2>
    <div>
      <h3
        id="configuration"
      >
        Configuration
      </h3>
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        aria-colcount="2"
        aria-describedby=""
        aria-labelledby="configuration"
        aria-rowcount="2"
        class="hm005a_spectrum-Table hm005a_spectrum-Table--regular FsDyjq_react-spectrum-Table"
        data-collection="react-aria-_r_1_"
        id="react-aria-_r_0_"
        role="grid"
        style="width: 100%;"
        tabindex="0"
      >
        <div
          class="hm005a_spectrum-Table-headWrapper"
          role="presentation"
          style="height: 40px; overflow: hidden; position: relative; scroll-padding-inline-start: 0;"
        >
          <div
            class="spectrum-Table-head"
            role="rowgroup"
            style="position: sticky; display: inline-block; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 40px;"
          >
            <div
              aria-rowindex="1"
              role="row"
              style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 40px;"
            >
              <div
                class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                role="presentation"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 3; contain: size layout style; top: 0px; left: 0px; width: 9007199254740991px; height: 40px;"
              >
                <div
                  aria-colindex="1"
                  class="hm005a_spectrum-Table-headCell FsDyjq_react-spectrum-Table-cell"
                  data-collection="react-aria-_r_1_"
                  data-key="$.0"
                  data-react-aria-pressable="true"
                  id="react-aria-_r_0_-$.0"
                  role="columnheader"
                  tabindex="-1"
                >
                  <div
                    class="hm005a_spectrum-Table-headCellContents"
                  >
                    Key
                  </div>
                </div>
              </div>
              <div
                class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                role="presentation"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 2; contain: size layout style; top: 0px; left: 9007199254740991px; width: 9007199254740991px; height: 40px;"
              >
                <div
                  aria-colindex="2"
                  class="hm005a_spectrum-Table-headCell FsDyjq_react-spectrum-Table-cell"
                  data-collection="react-aria-_r_1_"
                  data-key="$.1"
                  data-react-aria-pressable="true"
                  id="react-aria-_r_0_-$.1"
                  role="columnheader"
                  tabindex="-1"
                >
                  <div
                    class="hm005a_spectrum-Table-headCellContents"
                  >
                    Value
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="hm005a_spectrum-Table-body FsDyjq_react-spectrum-Table-body"
          role="rowgroup"
          style="padding: 0px; flex: 1 1 0%; scroll-padding-inline-start: 0; overflow: auto;"
          tabindex="-1"
        >
          <div
            role="presentation"
            style="width: 18014398509481982px; height: 51px; pointer-events: auto; position: relative; overflow: visible;"
          >
            <div
              role="presentation"
              style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 51px;"
            >
              <div
                aria-labelledby="react-aria-_r_0_-key-$.0"
                aria-rowindex="2"
                class="hm005a_spectrum-Table-row hm005a_spectrum-Table-row--firstRow hm005a_spectrum-Table-row--lastRow FsDyjq_react-spectrum-Table-row"
                data-collection="react-aria-_r_1_"
                data-key="key"
                data-react-aria-pressable="true"
                id="react-aria-_r_5_"
                role="row"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 51px;"
                tabindex="-1"
              >
                <div
                  class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                  role="presentation"
                  style="position: absolute; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 0px; width: 9007199254740991px; height: 50px;"
                >
                  <div
                    aria-colindex="1"
                    aria-labelledby="react-aria-_r_0_-key-$.0"
                    class="hm005a_spectrum-Table-cell FsDyjq_react-spectrum-Table-cell"
                    data-collection="react-aria-_r_1_"
                    data-key="key.0"
                    role="rowheader"
                    tabindex="-1"
                  >
                    <span
                      class="hm005a_spectrum-Table-cellContents"
                      id="react-aria-_r_0_-key-$.0"
                    >
                      key
                    </span>
                  </div>
                </div>
                <div
                  class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                  role="presentation"
                  style="position: absolute; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 9007199254740991px; width: 9007199254740991px; height: 50px;"
                >
                  <div
                    aria-colindex="2"
                    aria-labelledby="react-aria-_r_7_"
                    class="hm005a_spectrum-Table-cell FsDyjq_react-spectrum-Table-cell"
                    data-collection="react-aria-_r_1_"
                    data-key="key.1"
                    role="gridcell"
                    tabindex="-1"
                  >
                    <span
                      class="hm005a_spectrum-Table-cellContents"
                      id="react-aria-_r_7_"
                    >
                      value
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="hm005a_spectrum-Table-bodyResizeIndicator"
              style="left: 0px; height: 51px; display: none;"
            />
          </div>
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
    <div>
      <h3
        id="stage-definitions"
      >
        Stage Definitions
      </h3>
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        aria-colcount="2"
        aria-describedby=""
        aria-labelledby="stage-definnitions"
        aria-rowcount="2"
        class="hm005a_spectrum-Table hm005a_spectrum-Table--regular FsDyjq_react-spectrum-Table"
        data-collection="react-aria-_r_9_"
        id="react-aria-_r_8_"
        role="grid"
        style="width: 100%;"
        tabindex="0"
      >
        <div
          class="hm005a_spectrum-Table-headWrapper"
          role="presentation"
          style="height: 40px; overflow: hidden; position: relative; scroll-padding-inline-start: 0;"
        >
          <div
            class="spectrum-Table-head"
            role="rowgroup"
            style="position: sticky; display: inline-block; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 40px;"
          >
            <div
              aria-rowindex="1"
              role="row"
              style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 40px;"
            >
              <div
                class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                role="presentation"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 3; contain: size layout style; top: 0px; left: 0px; width: 9007199254740991px; height: 40px;"
              >
                <div
                  aria-colindex="1"
                  class="hm005a_spectrum-Table-headCell FsDyjq_react-spectrum-Table-cell"
                  data-collection="react-aria-_r_9_"
                  data-key="$.0"
                  data-react-aria-pressable="true"
                  id="react-aria-_r_8_-$.0"
                  role="columnheader"
                  tabindex="-1"
                >
                  <div
                    class="hm005a_spectrum-Table-headCellContents"
                  >
                    Key
                  </div>
                </div>
              </div>
              <div
                class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                role="presentation"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 2; contain: size layout style; top: 0px; left: 9007199254740991px; width: 9007199254740991px; height: 40px;"
              >
                <div
                  aria-colindex="2"
                  class="hm005a_spectrum-Table-headCell FsDyjq_react-spectrum-Table-cell"
                  data-collection="react-aria-_r_9_"
                  data-key="$.1"
                  data-react-aria-pressable="true"
                  id="react-aria-_r_8_-$.1"
                  role="columnheader"
                  tabindex="-1"
                >
                  <div
                    class="hm005a_spectrum-Table-headCellContents"
                  >
                    Value
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="hm005a_spectrum-Table-body FsDyjq_react-spectrum-Table-body"
          role="rowgroup"
          style="padding: 0px; flex: 1 1 0%; scroll-padding-inline-start: 0; overflow: auto;"
          tabindex="-1"
        >
          <div
            role="presentation"
            style="width: 18014398509481982px; height: 51px; pointer-events: auto; position: relative; overflow: visible;"
          >
            <div
              role="presentation"
              style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 51px;"
            >
              <div
                aria-labelledby="react-aria-_r_8_-stage1-$.0"
                aria-rowindex="2"
                class="hm005a_spectrum-Table-row hm005a_spectrum-Table-row--firstRow hm005a_spectrum-Table-row--lastRow FsDyjq_react-spectrum-Table-row"
                data-collection="react-aria-_r_9_"
                data-key="stage1"
                data-react-aria-pressable="true"
                id="react-aria-_r_d_"
                role="row"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 51px;"
                tabindex="-1"
              >
                <div
                  class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                  role="presentation"
                  style="position: absolute; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 0px; width: 9007199254740991px; height: 50px;"
                >
                  <div
                    aria-colindex="1"
                    aria-labelledby="react-aria-_r_8_-stage1-$.0"
                    class="hm005a_spectrum-Table-cell FsDyjq_react-spectrum-Table-cell"
                    data-collection="react-aria-_r_9_"
                    data-key="stage1.0"
                    role="rowheader"
                    tabindex="-1"
                  >
                    <span
                      class="hm005a_spectrum-Table-cellContents"
                      id="react-aria-_r_8_-stage1-$.0"
                    >
                      stage1
                    </span>
                  </div>
                </div>
                <div
                  class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                  role="presentation"
                  style="position: absolute; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 9007199254740991px; width: 9007199254740991px; height: 50px;"
                >
                  <div
                    aria-colindex="2"
                    aria-labelledby="react-aria-_r_f_"
                    class="hm005a_spectrum-Table-cell FsDyjq_react-spectrum-Table-cell"
                    data-collection="react-aria-_r_9_"
                    data-key="stage1.1"
                    role="gridcell"
                    tabindex="-1"
                  >
                    <span
                      class="hm005a_spectrum-Table-cellContents"
                      id="react-aria-_r_f_"
                    >
                      step1, step2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="hm005a_spectrum-Table-bodyResizeIndicator"
              style="left: 0px; height: 51px; display: none;"
            />
          </div>
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</div>
`;

exports[`Extension > renders correctly without config 1`] = `
<div
  class="_t8qIa_spectrum kDKRXa_spectrum kDKRXa_i18nFontFamily YqfL3a_spectrum--light _1DrGeG_spectrum--large XhWg9q_spectrum XhWg9q_spectrum--dark XhWg9q_spectrum--darkest XhWg9q_spectrum--large XhWg9q_spectrum--light XhWg9q_spectrum--lightest XhWg9q_spectrum--medium"
  dir="ltr"
  lang="en-US"
  style="isolation: isolate; color-scheme: light;"
>
  <div
    class="_extension-root_c3dee6 _grow_c3dee6"
  >
    <h2>
      test-extension
    </h2>
    <div>
      <h3
        id="stage-definitions"
      >
        Stage Definitions
      </h3>
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        aria-colcount="2"
        aria-describedby=""
        aria-labelledby="stage-definnitions"
        aria-rowcount="2"
        class="hm005a_spectrum-Table hm005a_spectrum-Table--regular FsDyjq_react-spectrum-Table"
        data-collection="react-aria-_r_h_"
        id="react-aria-_r_g_"
        role="grid"
        style="width: 100%;"
        tabindex="0"
      >
        <div
          class="hm005a_spectrum-Table-headWrapper"
          role="presentation"
          style="height: 40px; overflow: hidden; position: relative; scroll-padding-inline-start: 0;"
        >
          <div
            class="spectrum-Table-head"
            role="rowgroup"
            style="position: sticky; display: inline-block; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 40px;"
          >
            <div
              aria-rowindex="1"
              role="row"
              style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 40px;"
            >
              <div
                class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                role="presentation"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 3; contain: size layout style; top: 0px; left: 0px; width: 9007199254740991px; height: 40px;"
              >
                <div
                  aria-colindex="1"
                  class="hm005a_spectrum-Table-headCell FsDyjq_react-spectrum-Table-cell"
                  data-collection="react-aria-_r_h_"
                  data-key="$.0"
                  data-react-aria-pressable="true"
                  id="react-aria-_r_g_-$.0"
                  role="columnheader"
                  tabindex="-1"
                >
                  <div
                    class="hm005a_spectrum-Table-headCellContents"
                  >
                    Key
                  </div>
                </div>
              </div>
              <div
                class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                role="presentation"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 2; contain: size layout style; top: 0px; left: 9007199254740991px; width: 9007199254740991px; height: 40px;"
              >
                <div
                  aria-colindex="2"
                  class="hm005a_spectrum-Table-headCell FsDyjq_react-spectrum-Table-cell"
                  data-collection="react-aria-_r_h_"
                  data-key="$.1"
                  data-react-aria-pressable="true"
                  id="react-aria-_r_g_-$.1"
                  role="columnheader"
                  tabindex="-1"
                >
                  <div
                    class="hm005a_spectrum-Table-headCellContents"
                  >
                    Value
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="hm005a_spectrum-Table-body FsDyjq_react-spectrum-Table-body"
          role="rowgroup"
          style="padding: 0px; flex: 1 1 0%; scroll-padding-inline-start: 0; overflow: auto;"
          tabindex="-1"
        >
          <div
            role="presentation"
            style="width: 18014398509481982px; height: 51px; pointer-events: auto; position: relative; overflow: visible;"
          >
            <div
              role="presentation"
              style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 51px;"
            >
              <div
                aria-labelledby="react-aria-_r_g_-stage1-$.0"
                aria-rowindex="2"
                class="hm005a_spectrum-Table-row hm005a_spectrum-Table-row--firstRow hm005a_spectrum-Table-row--lastRow FsDyjq_react-spectrum-Table-row"
                data-collection="react-aria-_r_h_"
                data-key="stage1"
                data-react-aria-pressable="true"
                id="react-aria-_r_l_"
                role="row"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 51px;"
                tabindex="-1"
              >
                <div
                  class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                  role="presentation"
                  style="position: absolute; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 0px; width: 9007199254740991px; height: 50px;"
                >
                  <div
                    aria-colindex="1"
                    aria-labelledby="react-aria-_r_g_-stage1-$.0"
                    class="hm005a_spectrum-Table-cell FsDyjq_react-spectrum-Table-cell"
                    data-collection="react-aria-_r_h_"
                    data-key="stage1.0"
                    role="rowheader"
                    tabindex="-1"
                  >
                    <span
                      class="hm005a_spectrum-Table-cellContents"
                      id="react-aria-_r_g_-stage1-$.0"
                    >
                      stage1
                    </span>
                  </div>
                </div>
                <div
                  class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                  role="presentation"
                  style="position: absolute; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 9007199254740991px; width: 9007199254740991px; height: 50px;"
                >
                  <div
                    aria-colindex="2"
                    aria-labelledby="react-aria-_r_n_"
                    class="hm005a_spectrum-Table-cell FsDyjq_react-spectrum-Table-cell"
                    data-collection="react-aria-_r_h_"
                    data-key="stage1.1"
                    role="gridcell"
                    tabindex="-1"
                  >
                    <span
                      class="hm005a_spectrum-Table-cellContents"
                      id="react-aria-_r_n_"
                    >
                      step1
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="hm005a_spectrum-Table-bodyResizeIndicator"
              style="left: 0px; height: 51px; display: none;"
            />
          </div>
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</div>
`;

exports[`Extension > renders correctly without stageDefinition 1`] = `
<div
  class="_t8qIa_spectrum kDKRXa_spectrum kDKRXa_i18nFontFamily YqfL3a_spectrum--light _1DrGeG_spectrum--large XhWg9q_spectrum XhWg9q_spectrum--dark XhWg9q_spectrum--darkest XhWg9q_spectrum--large XhWg9q_spectrum--light XhWg9q_spectrum--lightest XhWg9q_spectrum--medium"
  dir="ltr"
  lang="en-US"
  style="isolation: isolate; color-scheme: light;"
>
  <div
    class="_extension-root_c3dee6 _grow_c3dee6"
  >
    <h2>
      test-extension
    </h2>
    <div>
      <h3
        id="configuration"
      >
        Configuration
      </h3>
      <span
        data-focus-scope-start="true"
        hidden=""
      />
      <div
        aria-colcount="2"
        aria-describedby=""
        aria-labelledby="configuration"
        aria-rowcount="2"
        class="hm005a_spectrum-Table hm005a_spectrum-Table--regular FsDyjq_react-spectrum-Table"
        data-collection="react-aria-_r_p_"
        id="react-aria-_r_o_"
        role="grid"
        style="width: 100%;"
        tabindex="0"
      >
        <div
          class="hm005a_spectrum-Table-headWrapper"
          role="presentation"
          style="height: 40px; overflow: hidden; position: relative; scroll-padding-inline-start: 0;"
        >
          <div
            class="spectrum-Table-head"
            role="rowgroup"
            style="position: sticky; display: inline-block; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 40px;"
          >
            <div
              aria-rowindex="1"
              role="row"
              style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 40px;"
            >
              <div
                class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                role="presentation"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 3; contain: size layout style; top: 0px; left: 0px; width: 9007199254740991px; height: 40px;"
              >
                <div
                  aria-colindex="1"
                  class="hm005a_spectrum-Table-headCell FsDyjq_react-spectrum-Table-cell"
                  data-collection="react-aria-_r_p_"
                  data-key="$.0"
                  data-react-aria-pressable="true"
                  id="react-aria-_r_o_-$.0"
                  role="columnheader"
                  tabindex="-1"
                >
                  <div
                    class="hm005a_spectrum-Table-headCellContents"
                  >
                    Key
                  </div>
                </div>
              </div>
              <div
                class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                role="presentation"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 2; contain: size layout style; top: 0px; left: 9007199254740991px; width: 9007199254740991px; height: 40px;"
              >
                <div
                  aria-colindex="2"
                  class="hm005a_spectrum-Table-headCell FsDyjq_react-spectrum-Table-cell"
                  data-collection="react-aria-_r_p_"
                  data-key="$.1"
                  data-react-aria-pressable="true"
                  id="react-aria-_r_o_-$.1"
                  role="columnheader"
                  tabindex="-1"
                >
                  <div
                    class="hm005a_spectrum-Table-headCellContents"
                  >
                    Value
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="hm005a_spectrum-Table-body FsDyjq_react-spectrum-Table-body"
          role="rowgroup"
          style="padding: 0px; flex: 1 1 0%; scroll-padding-inline-start: 0; overflow: auto;"
          tabindex="-1"
        >
          <div
            role="presentation"
            style="width: 18014398509481982px; height: 51px; pointer-events: auto; position: relative; overflow: visible;"
          >
            <div
              role="presentation"
              style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 51px;"
            >
              <div
                aria-labelledby="react-aria-_r_o_-key-$.0"
                aria-rowindex="2"
                class="hm005a_spectrum-Table-row hm005a_spectrum-Table-row--firstRow hm005a_spectrum-Table-row--lastRow FsDyjq_react-spectrum-Table-row"
                data-collection="react-aria-_r_p_"
                data-key="key"
                data-react-aria-pressable="true"
                id="react-aria-_r_t_"
                role="row"
                style="position: absolute; overflow: visible; opacity: 1; z-index: 0; contain: size layout style; top: 0px; left: 0px; width: 18014398509481982px; height: 51px;"
                tabindex="-1"
              >
                <div
                  class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                  role="presentation"
                  style="position: absolute; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 0px; width: 9007199254740991px; height: 50px;"
                >
                  <div
                    aria-colindex="1"
                    aria-labelledby="react-aria-_r_o_-key-$.0"
                    class="hm005a_spectrum-Table-cell FsDyjq_react-spectrum-Table-cell"
                    data-collection="react-aria-_r_p_"
                    data-key="key.0"
                    role="rowheader"
                    tabindex="-1"
                  >
                    <span
                      class="hm005a_spectrum-Table-cellContents"
                      id="react-aria-_r_o_-key-$.0"
                    >
                      key
                    </span>
                  </div>
                </div>
                <div
                  class="hm005a_spectrum-Table-cellWrapper FsDyjq_react-spectrum-Table-cellWrapper"
                  role="presentation"
                  style="position: absolute; overflow: visible; opacity: 1; z-index: 1; contain: size layout style; top: 0px; left: 9007199254740991px; width: 9007199254740991px; height: 50px;"
                >
                  <div
                    aria-colindex="2"
                    aria-labelledby="react-aria-_r_v_"
                    class="hm005a_spectrum-Table-cell FsDyjq_react-spectrum-Table-cell"
                    data-collection="react-aria-_r_p_"
                    data-key="key.1"
                    role="gridcell"
                    tabindex="-1"
                  >
                    <span
                      class="hm005a_spectrum-Table-cellContents"
                      id="react-aria-_r_v_"
                    >
                      value
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="hm005a_spectrum-Table-bodyResizeIndicator"
              style="left: 0px; height: 51px; display: none;"
            />
          </div>
        </div>
      </div>
      <span
        data-focus-scope-end="true"
        hidden=""
      />
    </div>
  </div>
</div>
`;
